# CI

./: CMakeLists.txt
.github/workflows/: cmake.yml
src/: CMakeLists.txt  factorial.cpp  main.cpp
tests/: CMakeLists.txt  factorial_test.cpp
